--- a/src/CSharp.UnionTypes.VSIX/CSharp.UnionTypes.VSIX.csproj
+++ b/src/CSharp.UnionTypes.VSIX/CSharp.UnionTypes.VSIX.csproj
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\packages\Microsoft.VSSDK.BuildTools\tools\VsSDK\Microsoft.VsSDK.props" Condition="Exists('..\..\packages\Microsoft.VSSDK.BuildTools\tools\VsSDK\Microsoft.VsSDK.props')" />
-  <Import Project="..\..\packages\Microsoft.VSSDK.BuildTools\tools\VsSDK\Microsoft.VsSDK.targets" Condition="Exists('..\..\packages\Microsoft.VSSDK.BuildTools\tools\VsSDK\Microsoft.VsSDK.targets')" />
-  <Import Project="..\..\packages\Microsoft.VSSDK.BuildTools\build\Microsoft.VSSDK.BuildTools.props" Condition="Exists('..\..\packages\Microsoft.VSSDK.BuildTools\build\Microsoft.VSSDK.BuildTools.props')" Label="Paket" />
   <PropertyGroup>
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <NuGetPackageImportStamp>
@@ -54,7 +52,6 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>.\bin\$(Configuration)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
-  <Import Project="..\..\.paket\paket.targets" />
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CSharpUnionTypeGenerator.cs" />
@@ -75,10 +72,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="Resources\SFG.ico" >
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
+    <Content Include="Resources\SFG.ico" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -96,6 +90,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\packages\Microsoft.VSSDK.BuildTools\tools\VsSDK\Microsoft.VsSDK.targets" Condition="Exists('..\..\packages\Microsoft.VSSDK.BuildTools\tools\VsSDK\Microsoft.VsSDK.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
